Added file upload images to profile page.

--- a/assets/css/pages/games.styl
+++ b/assets/css/pages/games.styl
@@ -9,7 +9,7 @@
       //    background-lowlight()
       // .chain
       //    holder: true
-   .icon
+   .icon-gamecell
       float: left
    .text
       position: relative
