--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -183,18 +183,20 @@
       &.tell-friend
          background-position: -204px 0
 
-   &.gamecell
-      width: 72px
-      height: 72px
-      background: url(../images/icons/icons-gamecell.png) no-repeat
-      background-size: 226px 72px
-            
-      &.attendence-streak
-         background-position: 0 0
-      &.game-face
-         background-position: -77px 0
-      &.guess-the-score
-         background-position: -154px 0
+.icon-gamecell
+   width: 72px
+   height: 72px
+   background: url(../images/icons/icons-gamecell.png) no-repeat
+   background-size: 303px 72px
+         
+   &.attendence-streak
+      background-position: 0 0
+   &.game-face
+      background-position: -77px 0
+   &.guess-the-score
+      background-position: -154px 0
+   &.locked
+      background-position: -231px 0
       
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5)
    .ui-page
