Edited VM initialization to be on page create so that it is not called multiple times. Also added in ko.cleanNode() on pageremove to safe memory.

--- a/assets/css/pages/profile.styl
+++ b/assets/css/pages/profile.styl
@@ -13,7 +13,7 @@
          right: 0
          top: 0
          width: 210px
-         height: 120px
+         height: 210px
          cursor: pointer
          .cover
             position: absolute
@@ -144,6 +144,23 @@
       .separator
          background-position: -645px 0 
 
+#profile-editBio-page
+#profile-editGameDaySpot-page
+#profile-editBraggingRights-page
+   .image-title
+      width: 320px
+      height: 32px
+      background: url(../images/profile/ProfileSeperators.png) no-repeat
+      background-size: 965px 26px
+      margin: 0 auto 5px auto
+      .game-day-spot
+         background-position: -322.5px 0 
+      .bragging-rights
+         background-position: -645px 0 
+   .text-edit
+      width: 100%
+      height: 180px
+
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5)
    #profile-page
    #connect-profile-page
@@ -160,4 +177,9 @@
       .score-wrap
          background-image: url(../images/profile/Profile_ScoreDisplay-iPhone@2x.png)!important
       .separator
+         background-image: url(../images/profile/ProfileSeperators@2x.png)!important
+   #profile-editBio-page
+   #profile-editGameDaySpot-page
+   #profile-editBraggingRights-page
+      .image-title
          background-image: url(../images/profile/ProfileSeperators@2x.png)!important
