--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -7,6 +7,10 @@
    font-family: JerseyM54
    src: url(../fonts/JerseyM54.ttf)
 
+@font-face
+   font-family: Journal
+   src: url(../fonts/Journal.ttf)
+
 .clear
    clear: both
    height: 1px
@@ -156,6 +160,10 @@
             font-weight: lighter
             margin: 3px 0 4px 0
             color: color-red
+
+.tutorial
+   font-family: Journal, Helvetica, Arial, sans-serif
+
 // Icons
 .icon
    &.settings
