--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -69,7 +69,7 @@
       background-position: -53px 0
    .connect-menu .ui-icon
       background-position: 0 0
-   .preferences-menu .ui-icon
+   .settings-menu .ui-icon
       background-position: -212px 0
 
 // Elements
