--- a/views/layout.jade
+++ b/views/layout.jade
@@ -40,6 +40,9 @@ html
          .content(data-role="content")
             block content
 
+         .tutorial
+            block tutorial
+
          .footer(data-role="footer", data-id="footer", data-position="fixed")
             div(data-role="navbar")
                ul
