--- a/views/profile.jade
+++ b/views/profile.jade
@@ -44,5 +44,61 @@ block content
       .separator
       .text(data-bind="text: game_day_spot") 
    
-   
+block tutorial
+   .tutorial-slider.four
+      .tutorial-item
+         .tutorial-content
+            .tutorial-close
+            .tutorial-next
+            .tutorial-pos-indicator
+               .dot.active
+               .dot
+               .dot
+               .dot
+            .tutorial-welcome
+            .tutorial-fannect-logo
+            p.medium Congratulations on becoming a part of your team's committed fanbase!
+            .tutorial-separator
+            p Use Fannect to prove that your team has the best fans in the universe, and fight to become your team's #1 fan!
+      .tutorial-item
+         .tutorial-content
+            .tutorial-close
+            .tutorial-next
+            .tutorial-prev
+            .tutorial-pos-indicator
+               .dot
+               .dot.active
+               .dot
+               .dot
+            .tutorial-welcome
+            .tutorial-fannect-logo
+            p.large The rules are simple
+            .tutorial-separator
+            ol
+               li Create an awesome profile
+               li Build each team's roster of fanatics
+               li Score points for your team
+               li Climb the Fannect leaderboard
+      .tutorial-item
+         .tutorial-content
+            .tutorial-close
+            .tutorial-next
+            .tutorial-prev
+            .tutorial-pos-indicator
+               .dot
+               .dot
+               .dot.active
+               .dot
+      .tutorial-item
+         .tutorial-content
+            .tutorial-close
+            .tutorial-prev
+            .tutorial-pos-indicator
+               .dot
+               .dot
+               .dot
+               .dot.active
+            .tutorial-welcome
+            .tutorial-fannect-logo
+
 
