Completed profile tutorial.

--- a/assets/css/pages/profile.styl
+++ b/assets/css/pages/profile.styl
@@ -158,7 +158,24 @@
       height: 16px
       background: url(../images/tutorial/Tutorial_dividerLine.png) 50% 50% no-repeat
       background-size: 143px 8px
-   
+   .tutorial
+      .left
+         text-align: left
+   .tutorial-profile-sketch
+      height: 176px
+      background: url(../images/tutorial/Tutorial_tapToAdd.png) 50% 50% no-repeat
+      background-size: 229px 176px
+   .tutorial-score-sketch
+      height: 24px
+      background: url(../images/tutorial/Tutorial_scoreBar.png) 50% 50% no-repeat
+      background-size: 221px 24px
+      margin-bottom: 4px
+   .tutorial-headers
+      height: 95px
+      background: url(../images/tutorial/Tutorial_headers.png) 50% 50% no-repeat
+      background-size: 220px 95px
+      margin: 2px 0 8px 
+
 #profile-editBio-page
 #profile-editGameDaySpot-page
 #profile-editBraggingRights-page
@@ -206,3 +223,10 @@
          background-image: url(../images/tutorial/Tutorial_fannectLogo@2x.png)
       .tutorial-separator
          background-image: url(../images/tutorial/Tutorial_dividerLine@2x.png)
+      .tutorial-profile-sketch
+         background-image: url(../images/tutorial/Tutorial_tapToAdd@2x.png)
+      .tutorial-score-sketch
+         background-image: url(../images/tutorial/Tutorial_scoreBar@2x.png)
+      .tutorial-headers
+         background-image: url(../images/tutorial/Tutorial_headers@2x.png)
+   
