--- a/views/profile.jade
+++ b/views/profile.jade
@@ -89,6 +89,9 @@ block tutorial
                .dot
                .dot.active
                .dot
+            p.left Upload your profile picture here so other fans know who you are
+            .tutorial-profile-sketch
+            p.left Show your spirit by uploading a team photo or logo for your favorite team here
       .tutorial-item
          .tutorial-content
             .tutorial-close
@@ -98,7 +101,8 @@ block tutorial
                .dot
                .dot
                .dot.active
-            .tutorial-welcome
-            .tutorial-fannect-logo
-
+            .tutorial-score-sketch
+            p.left This bar indicates the number of fans on your roster, your point total, and your overall rank for your team
+            .tutorial-headers
+            p.left Amp up your profile by filling out these sections. Tell us about you, your gameday ritual, and why your team is #1
 
