--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -161,6 +161,10 @@
             margin: 3px 0 4px 0
             color: color-red
 
+.tutorial-link .ui-icon.ui-icon-custom
+   background: url(../images/tutorial/InfoButton@2x.png) no-repeat
+   background-size: 18px 18px
+
 .tutorial
    font-family: Journal, Helvetica, Arial, sans-serif
    position: fixed
@@ -212,14 +216,14 @@
       background: url(../images/tutorial/Tutorial_exitButton.png) 50% 50% no-repeat
       background-size: 27px 31px
       top: 4px
-      right: 2px
+      right: 0px
       width: 36px
       height: 36px
       cursor: pointer
       &:active
          background-image: url(../images/tutorial/tutorial_redX.png)
    .tutorial-title
-      font-size: 1.6em
+      font-size: 1.3em
       text-align: center
    .tutorial-next
    .tutorial-prev
@@ -330,6 +334,8 @@
    .icon.gamecell
       background-image: url(../images/icons/icons-gamecell@2x.png)
 
+   .tutorial-link .ui-icon.ui-icon-custom
+      background-image: url(../images/tutorial/InfoButton@2x.png)
    .tutorial-item
       background-image: url(../images/tutorial/Tutorial_chalkboard@2x.png)!important
    .tutorial-close
