--- a/views/games/gameFace.jade
+++ b/views/games/gameFace.jade
@@ -1,9 +1,10 @@
 extend ../layout
 
 block header
-   a(href="games", data-icon="back", data-rel="back") Back
    h1(data-menu-root="games") Games
-
+   a(href="games", data-icon="back", data-rel="back") Back
+   a.tutorial-link(href="#", data-iconpos="notext", data-icon="custom", data-theme="b")
+   
 block content
 
    .game-face(data-bind="css: { on: face_on() }")
