--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -353,9 +353,11 @@
          &.active
             background-image: url(../images/tutorial/Tutorial_currentPageIndicator@2x.png)!important
 
-
 @import "pages/profile"
 @import "pages/games"
+@import "pages/games/attendanceStreak"
+@import "pages/games/gameFace"
+@import "pages/games/guessTheScore"
 @import "pages/leaderboard"
 @import "pages/connect"
 @import "pages/settings"
