Finished creating tutorials.

--- a/assets/css/pages/games/guessTheScore.styl
+++ b/assets/css/pages/games/guessTheScore.styl
@@ -61,9 +61,17 @@
             margin-top: 24px
             font-size: .8em
 
+   .tutorial-score-picker
+      height: 152px
+      background: url(../images/tutorial/Tutorial_scorePickers.png) 50% 0 no-repeat
+      background-size: 252px 152px
+      margin: 8px 0 6px
+
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5)
    #games-guessTheScore-page
       .guess-wrap
          background-image: url(../images/games/guessTheScore/Overlay_PickSetBox@2x.png)!important
       .game-preview
          background-image: url(../images/games/guessTheScore/Overlay_SubtleShadow@2x.png)!important
+      .tutorial-score-picker
+         background-image: url(../images/tutorial/Tutorial_scorePickers@2x.png)!important
