--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -272,7 +272,11 @@
       left: 30px
       list-style: decimal outside
       text-align: left
-
+   .tutorial-submit-button
+      height: 55px
+      background: url(../images/tutorial/Tutorial_submitButton.png) 50% 0 no-repeat
+      background-size: 225px 55px
+      margin-top: 8px
 // Icons
 .icon
    &.settings
@@ -352,7 +356,9 @@
          background-image: url(../images/tutorial/Tutorial_openPageIndicator@2x.png)!important
          &.active
             background-image: url(../images/tutorial/Tutorial_currentPageIndicator@2x.png)!important
-
+   .tutorial-submit-button
+      background-image: url(../images/tutorial/Tutorial_submitButton@2x.png)!important
+      
 @import "pages/profile"
 @import "pages/games"
 @import "pages/games/attendanceStreak"
