--- a/assets/css/pages/games/gameFace.styl
+++ b/assets/css/pages/games/gameFace.styl
@@ -30,7 +30,23 @@
       .ui-slider
          margin: 0
 
+   .tutorial-gameface-sketch
+      height: 151px
+      background: url(../images/tutorial/Tutorial_gamefaceIcon.png) 50% 0 no-repeat
+      background-size: 191px 151px
+      margin: 8px 0 6px
+
+   .tutorial-switch
+      height: 54px
+      background: url(../images/tutorial/Tutorial_onSwitch.png) 50% 0 no-repeat
+      background-size: 163px 54px
+      margin: 8px 0
+
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5)
    #games-gameFace-page
       .game-face
          background-image: url(../images/games/gameFace/Gameface_Sprite@2x.png) 
+       .tutorial-gameface-sketch
+         background-image: url(../images/tutorial/Tutorial_gamefaceIcon@2x.png)
+      .tutorial-switch
+         background-image: url(../images/tutorial/Tutorial_onSwitch@2x.png)
