--- a/views/games/attendanceStreak.jade
+++ b/views/games/attendanceStreak.jade
@@ -1,7 +1,7 @@
 extend ../layout
 
 block header
-   h1(data-menu-root="games") Games
+   h1(data-menu-root="games") ATTENDANCE
    a(href="games", data-icon="back", data-rel="back") Back
    a.tutorial-link(href="#", data-iconpos="notext", data-icon="custom", data-theme="b")
 
