Added in invitation profile.

--- a/assets/css/pages/profile.styl
+++ b/assets/css/pages/profile.styl
@@ -2,7 +2,8 @@
 @import "../lib/variables"
 
 #profile-page
-#connect-profile-page
+#connect-addToRosterProfile-page
+#profile-invitationProfile-page
    .profile-images
       position: relative
       height: 250px
