--- a/views/connect/addToRoster.jade
+++ b/views/connect/addToRoster.jade
@@ -5,4 +5,4 @@ block header
    a(href="connect.html", data-icon="back", data-rel="back") Back
 
 block content
-   ul.pattern-bg(data-role="listview", data-theme="c", data-filter="true", data-bind="template: { name:'connect-fan-template', foreach: roster_fans }, listviewUpdate: roster_fans, visible: roster_fans().length > 0").fans
+   ul.pattern-bg(data-role="listview", data-theme="a", data-filter="true", data-bind="template: { name:'connect-fan-template', foreach: roster_fans }, listviewUpdate: roster_fans, visible: roster_fans().length > 0").fans
