--- a/views/connect/addToRosterProfile.jade
+++ b/views/connect/addToRosterProfile.jade
@@ -11,4 +11,4 @@ block header
       .ui-corner-bottom.ui-content(data-role="content", data-theme="a")
          h3.ui-title Are you sure you want to add this player to your roster?
          a(href="#", data-role="button", data-inline="true", data-rel="back", data-theme="c") Cancel
-         a(data-role="button", data-inline="true", data-bind="click: addToRoster") Add
+         a(href="connect.html", data-role="button", data-inline="true", data-bind="click: addToRoster", data-transition="slideup") Add
