--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -18,6 +18,8 @@
 .header
    dropshadow: 0 2px 3px rgba(0,0,0,.5)
    z-index: 500
+   h1
+      text-transform: uppercase
    .ui-btn-left
    .ui-btn-right
       top: 5px
@@ -151,7 +153,8 @@
             border-radius: 5px
             dropshadow: inset 1px 2px 3px rgba(0,0,0,0.6), 0 1px 2px rgba(255, 255, 255, 0.8), 0 -1px 1px rgba(0, 0, 0, 0.8)
       .fan-info
-         margin: -2px 0 0 60px
+         margin: -2px 0 0 12px
+         float: left
          .name
             font-size: 1.5em
             font-weight: bold
@@ -160,6 +163,35 @@
             font-weight: lighter
             margin: 3px 0 4px 0
             color: color-red
+      
+      .left-icon
+         width: 38px            
+         height: 43px
+         float: left
+         margin: 0 2px 0 -12px
+         &.cancel
+            background: url(../images/icons/Button_Delete.png) 50% 50% no-repeat
+            background-size: 19px 19px
+
+      .right-icon
+         position: absolute
+         right: 10px
+         top: 0 
+         width: 34px            
+         height: 63px
+         &.rank
+            background: url(../images/leaderboard/Overlay_LeaderboardRank.png) 50% 50% no-repeat
+            background-size: 27px 28px
+            font-family: JerseyM54, Helvetica, Arial, sans-serif
+            text-align: center
+            font-size: 1.1em
+            line-height: 63px
+            color: color-dark-red
+            padding-left: 2px
+         &.accept
+            background: url(../images/icons/Button_Delete.png) 50% 50% no-repeat
+            background-size: 19px 19px
+
 
 .tutorial-link .ui-icon.ui-icon-custom
    background: url(../images/tutorial/InfoButton@2x.png) no-repeat
@@ -337,6 +369,14 @@
 
    .icon.gamecell
       background-image: url(../images/icons/icons-gamecell@2x.png)
+
+   .fans
+      .cancel
+         background-image: url(../images/icons/Button_Delete@2x.png)!important
+      .accept
+         background-image: url(../images/icons/Button_Delete@2x.png)!important
+      .rank
+         background-image: url(../images/leaderboard/Overlay_LeaderboardRank@2x.png)!important
 
    .tutorial-link .ui-icon.ui-icon-custom
       background-image: url(../images/tutorial/InfoButton@2x.png)
