--- a/views/profile.jade
+++ b/views/profile.jade
@@ -2,6 +2,7 @@ extend layout
 
 block header
    h1(data-menu-root="profile") Profile
+   a.ui-btn-left(href="profile-invitations.html", data-role="button") Invitations
    a.ui-btn-right(href="profile-editBio.html", data-role="button", data-transition="slide") Edit
 
 block content
