WIPgit status! Lots and lots of changes. Fudged auth.

--- a/assets/css/pages/profile.styl
+++ b/assets/css/pages/profile.styl
@@ -26,9 +26,13 @@
             background: url(../images/profile/Overlay_TeamPictureFrame.png) 
             background-size:162px 162px
          img
-            width: 210px
-            height: 210px
+            position: absolute
+            top: 7px
+            left: 11px
+            width: 140px
+            height: 140px
             border-radius: 10px
+            z-index: 10
       .user-wrap
          z-index: 300
          position: absolute
@@ -51,6 +55,7 @@
             width: 140px
             height: 140px
             border-radius: 10px
+            z-index: 10
       .team-hint
          position: absolute
          width: 194px
