--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -35,6 +35,10 @@
    background-size: 50px 50px
    overflow: hidden
 
+.ui-popup
+   h1
+      margin: .5em 0!important
+
 .ui-content
    overflow: hidden
    -webkit-overflow-scrolling: touch
