Added fixes to test PhoneGap camera functionality.

--- a/views/profile.jade
+++ b/views/profile.jade
@@ -31,7 +31,7 @@ block content
          .team-hint.ui-corner-all
          .cover
       .user-wrap(data-bind="click: changeUserImage, clickBubble: false")
-         img(data-bind="attr: {src:profile_image}, visible: profile_image().length > 0")
+         img(data-bind="attr: {src:profile_image}, visible: profile_image().length > 0", width="140", height="140")
          .user-hint.ui-corner-all
          .cover
 
