--- a/assets/css/pages/profile.styl
+++ b/assets/css/pages/profile.styl
@@ -23,14 +23,14 @@
             z-index: 200
             width: 210px
             height: 210px
-            background: url(../images/profile/Overlay_TeamPictureFrame.png) 
-            background-size:162px 162px
+            // background: url(../images/profile/Overlay_TeamPictureFrame.png) 
+            // background-size:162px 162px
          img
             position: absolute
             top: 7px
-            left: 11px
-            width: 140px
-            height: 140px
+            left: 4px
+            width: 190px
+            height: 190px
             border-radius: 10px
             z-index: 10
       .user-wrap
@@ -61,7 +61,7 @@
          width: 194px
          height: 186px
          top: 10px
-         left: 10px
+         left: 0px
          background: url(../images/profile/Profile_tapToAddTeamPhoto.png)
          background-size: 194px 186px
       .user-hint
