--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,7 +24,7 @@ html
          != js("tree")
 
       else
-         //- script(src="phonegap.js")
+         script(src="phonegap.js")
          script(src="js/tree.js")
 
    - var viewDir = locals.settings.views;
