Added view for leaderboard profile viewing.

--- a/assets/css/pages/games/guessTheScore.styl
+++ b/assets/css/pages/games/guessTheScore.styl
@@ -2,9 +2,11 @@
 @import "../lib/variables"
 
 #games-guessTheScore-page
+   .ui-content
+      padding: 15px 0
    .score
       margin: 10px auto 0
-      width: 320px
+      width: 300px
       .guess-block
          float: left
          width: 50%
@@ -37,9 +39,6 @@
                left: 0
                top: 0
                color: color-light-gray
-
-         &.home .guess-wrap
-            margin-left: 10px
          &.away .guess-wrap
             margin-left: 20px
    .picking
