--- a/assets/css/pages/profile.styl
+++ b/assets/css/pages/profile.styl
@@ -4,6 +4,7 @@
 #profile-page
 #connect-addToRosterProfile-page
 #profile-invitationProfile-page
+#leaderboard-rosterProfile-page
    .profile-images
       position: relative
       height: 250px
