--- a/assets/css/pages/connect.styl
+++ b/assets/css/pages/connect.styl
@@ -7,6 +7,7 @@
    .ui-content
       padding: 0
       .build-your-team
+         display: none
          margin: 0 auto
          color: #aaa
          text-shadow: none
