--- a/views/connect.jade
+++ b/views/connect.jade
@@ -6,7 +6,7 @@ block header
 
 block content
 
-   .build-your-team
+   .build-your-team(data-bind="fadeIn: roster_fans() == null || roster_fans().length <= 0")
       .gray-connect-icon
       .title Build your team!
       .text Tap the "Add" button to add more of your team's fans to your roster.
