--- a/views/layout.jade
+++ b/views/layout.jade
@@ -31,7 +31,7 @@ html
    - var view = locals.filename.replace(viewDir, "").replace(".jade", "").replace(/^[\\\/]/g, "");
    - var pageId = view.replace(/[\\\/]/g, "-") + "-page";
 
-   body
+   body.speed-up
       div(id=pageId, data-role="page", data-theme="a")
          //- .background-highlight
          .header(data-role="header", data-position="fixed", data-tap-toggle="false")
